language/move-lang/tests/move_check/expansion/use_inner_scope_unbound.exp
error: 

    ┌── tests/move_check/expansion/use_inner_scope_unbound.move:13:13 ───
    │
 13 │         use 0x2::N;
    │             ^^^^^^ Invalid 'use'. Unbound module: '0x2::N'
    │

error: 

    ┌── tests/move_check/expansion/use_inner_scope_unbound.move:14:21 ───
    │
 14 │         use 0x2::M::foo;
    │                     ^^^ Invalid 'use'. Unbound member 'foo' in module '0x2::M'
    ·
  2 │ module M {
    │        - Module '0x2::M' declared here
    │

